add assets + little structure update

--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -1,1 +1,6 @@
+@import './global/mixins.scss';
+@import './global/global.scss';
+
 @import './includes/header.scss';
+
+@import './modules/invitation.scss';
